# rlvr-grpo-lab

./: .gitignore  README.md  pyproject.toml
configs/: accelerate_single_gpu.yaml  cloud_3b_base_final_line_exact_grpo_pilot.yaml  cloud_3b_boundary_sft_cleanup_grpo.yaml  cloud_3b_boundary_sft_v2.yaml  cloud_3b_boundary_sft_v3_markerline.yaml  cloud_3b_boundary_sft_v4_source_finalline.yaml  cloud_3b_boundary_sft_warmup.yaml  cloud_3b_contract_curriculum_grpo.yaml  cloud_3b_final_line_exact_grpo_after_500.yaml  cloud_3b_rationale_sft_warmup.yaml  cloud_3b_rationale_sft_warmup_pilot.yaml  cloud_3b_strict_grpo_after_rationale_sft.yaml  cloud_3b_strict_grpo_after_rationale_sft_pilot.yaml  cloud_3b_strict_grpo_resume_pilot_500.yaml  cloud_7b_boundary_sft_v1.yaml  cloud_7b_boundary_sft_v2_source_finalline.yaml  cloud_7b_grpo.yaml  eval_cloud_3b_boundary_sft_cleanup_grpo_20_strict_128.yaml  eval_cloud_3b_boundary_sft_cleanup_grpo_20_strict_stopaware_128.yaml  eval_cloud_3b_boundary_sft_cleanup_grpo_40_strict_128.yaml  eval_cloud_3b_boundary_sft_cleanup_grpo_40_strict_384_128.yaml  eval_cloud_3b_boundary_sft_cleanup_grpo_40_strict_stopaware_128.yaml  eval_cloud_3b_boundary_sft_cleanup_grpo_40_strict_stopaware_384_128.yaml  eval_cloud_3b_boundary_sft_strict_128.yaml  eval_cloud_3b_boundary_sft_strict_384_128.yaml  eval_cloud_3b_boundary_sft_strict_stopaware_128.yaml  eval_cloud_3b_boundary_sft_strict_stopaware_384_128.yaml  eval_cloud_3b_boundary_sft_strict_stopaware_384_512.yaml  eval_cloud_3b_boundary_sft_strict_stopaware_384_full.yaml  eval_cloud_3b_minimal_final_128.yaml  (+39 more)
(+91 files in other folders)
