[project]
name = "rlvr-grpo-lab"
version = "0.1.0"
description = "RLVR/GRPO post-training experiments with verifiable rewards."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=13.9.4,<15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
train = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.0",
    "peft>=0.18.0",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "trl>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlvr_lab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
